# app_version_mana_rs

./: .env  Cargo.toml
scripts/: app.http  app_info.sql
src/: db.rs  main.rs
src/handlers/: app_info.rs  handlers.rs  mod.rs
src/models/: app_info.rs  mod.rs
src/pkg/utils/: id.rs
src/routers/: app_info.rs  mod.rs  routers.rs
