[package]
name = "app_version_mana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.18"
mysql = "24.0.0"
nanoid = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", default_features = false, features = [ "mysql", "runtime-tokio-rustls", "macros", "chrono"] }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]